📝 (globals.css): add new CSS class .text-gradient-blue for applying a blue gradient to text 🔧 (MobileNav.tsx): update z-index value to ensure proper stacking order of elements 🔧 (Navbar.tsx): apply new text-gradient-blue class to header title for a blue gradient effect 🔧 (AuthorLayout.tsx): replace text-blue-500 class with text-gradient-blue for consistent styling 🔧 (tailwind.config.ts): add light-blue color shades and a gradient definition for future use

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,7 @@ h3,
 p {
   margin-bottom: 1rem;
 }
+
+.text-gradient-blue {
+  @apply text-transparent bg-clip-text bg-gradient-light-blue;
+}
